--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "mongodb": "~1.3.3",
     "forever": "~0.10.8",
     "mongoose": "~3.6.10",
-    "socket.io-client": "~0.9.11"
+    "socket.io-client": "~0.9.11",
+    "graceful-fs": "~2.0.0"
   }
 }
